# ansible-deploy-vmseries

./: .gitignore  README.md  pyproject.toml  tasks.py
ansible/: .env.example  deploy.vmseries.yaml
docker/: Dockerfile  ansible.cfg  requirements.txt
docs/: deploy.vmseries.rst
